--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://sammythedeveloper.github.io/netflix",
+  "homepage": "https://sammythedeveloper.github.io/netflix",
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
